kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__paren_recovery_1.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_expr_string(\"(a + 1\")"
---
Node {
    node: Paren(
        ParenExpr {
            expr: Node {
                node: Binary(
                    BinaryExpr {
                        left: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "a",
                                            filename: "",
                                            line: 1,
                                            column: 1,
                                            end_line: 1,
                                            end_column: 2,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 1,
                            end_line: 1,
                            end_column: 2,
                        },
                        op: Bin(
                            Add,
                        ),
                        right: Node {
                            node: NumberLit(
                                NumberLit {
                                    binary_suffix: None,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 5,
                            end_line: 1,
                            end_column: 6,
                        },
                    },
                ),
                filename: "",
                line: 1,
                column: 1,
                end_line: 1,
                end_column: 6,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}

