kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__parse_body_item.snap
---
source: parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"\nx = {\n    if True\n}\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Target {
                                name: Node {
                                    node: "x",
                                    filename: "",
                                    line: 2,
                                    column: 0,
                                    end_line: 2,
                                    end_column: 1,
                                },
                                paths: [],
                                pkgpath: "",
                            },
                            filename: "",
                            line: 2,
                            column: 0,
                            end_line: 2,
                            end_column: 1,
                        },
                    ],
                    value: Node {
                        node: Config(
                            ConfigExpr {
                                items: [
                                    Node {
                                        node: ConfigEntry {
                                            key: None,
                                            value: Node {
                                                node: ConfigIfEntry(
                                                    ConfigIfEntryExpr {
                                                        if_cond: Node {
                                                            node: NameConstantLit(
                                                                NameConstantLit {
                                                                    value: True,
                                                                },
                                                            ),
                                                            filename: "",
                                                            line: 3,
                                                            column: 7,
                                                            end_line: 3,
                                                            end_column: 11,
                                                        },
                                                        items: [],
                                                        orelse: None,
                                                    },
                                                ),
                                                filename: "",
                                                line: 3,
                                                column: 4,
                                                end_line: 4,
                                                end_column: 0,
                                            },
                                            operation: Union,
                                        },
                                        filename: "",
                                        line: 3,
                                        column: 4,
                                        end_line: 4,
                                        end_column: 0,
                                    },
                                ],
                            },
                        ),
                        filename: "",
                        line: 2,
                        column: 4,
                        end_line: 4,
                        end_column: 1,
                    },
                    ty: None,
                },
            ),
            filename: "",
            line: 2,
            column: 0,
            end_line: 4,
            end_column: 1,
        },
    ],
    comments: [],
}
